--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,7 @@ and open the template in the editor.
         <h1>Sistema de ventas</h1>
         <ol>
             <li><a th:href="@{/clientes}">Cliente</a></li>
-            <li>second</li>
-            <li>third</li>
+            <li><a th:href="@{/productos}">Producto</a></li>
         </ol>
     </body>
 </html>
