--- a/src/main/resources/templates/listaClientes.html
+++ b/src/main/resources/templates/listaClientes.html
@@ -2,41 +2,67 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+    <head th:replace="plantillas/plantilla1 ::head">
         <title>TODO supply a title</title>
-        <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.0.1/css/bootstrap.min.css} "/>
-        <link th:rel="stylesheet" th:href="@{/assets/jquery-steps/jquery.steps.css} "/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <h1>Lista de clientes</h1>
-        <div th:if="${ clientes != null and !clientes.empty }">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th >Id</th>
-                        <th> Nombre</th>
-                        <th>Apellido</th>
-                        <th>Email</th>
-                        <th>Telefono</th>
-                        <th>Limite credito</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="cli:${clientes}">
-                        <td th:text="${cli.idCliente}"></td>
-                        <td th:text="${cli.nombre}"></td>
-                        <td th:text="${cli.apellido}"></td>
-                        <td th:text="${cli.email}"></td>
-                        <td th:text="${cli.telefono}"></td>
-                        <td th:text="${cli.limiteCredito}"></td>
-                    </tr>
-                </tbody>
-            </table>
+        <header th:replace="plantillas/plantilla1 ::header"></header>
+        <div class="container-lg">
+            <div class="card border-light" style="margin-top: 2%" >
+                <div class="card-header"> <h1>Lista de clientes</h1></div>
+            </div>
+            <div class="row align-items-center">
+                <form class="form" th:action="@{/filtrarClientes}" method="post">
+                    <div class="input-group">
+                        <div class="col">
+                            <input type="text" name="txtTexto" 
+                                   placeholder="Ingrese aqui el nombre o apellido" 
+                                   class="form-control" 
+                                   />
+                        </div>
+                        <div  class="col col-lg-2">
+                            <input style="width: 200px"  type="submit" name="btnBuscar" value="Buscar" class="btn btn-secondary mx-auto" />
+                        </div>
+                        <div  class="col col-lg-2">
+                            <a style="width: 200px" class="btn btn-secondary mx-auto" th:href="@{/nuevoCliente}"><i class="fas fa-user-plus"></i>Nuevo</a>
+                        </div> 
+                    </div>
+                </form>
 
-        </div>
-        <div th:if="${clientes == null or clientes.empty}">
-            <p>No ahi clientes</p>
+            </div>
+            <div th:if="${ clientes != null and !clientes.empty }">
+                <table class="table table-hover table-stripe">
+                    <thead>
+                        <tr>
+                            <th >Id</th>
+                            <th> Nombre</th>
+                            <th>Apellido</th>
+                            <th>Email</th>
+                            <th>Telefono</th>
+                            <th>Limite credito</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="cli:${clientes}">
+                            <td th:text="${cli.idCliente}"></td>
+                            <td th:text="${cli.nombre}"></td>
+                            <td th:text="${cli.apellido}"></td>
+                            <td th:text="${cli.email}"></td>
+                            <td th:text="${cli.telefono}"></td>
+                            <td th:text="${cli.limiteCredito}"></td>
+                            <td>
+                                <a th:href="@{/editarCliente/} + ${cli.idCliente}"><i class="fas fa-user-edit"></i>Editar</a>
+                                <a th:href="@{/eliminarCliente(idCliente=${cli.idCliente})}"><i class="fas fa-user-times"></i>Eliminar</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+            <div th:if="${clientes == null or clientes.empty}">
+                <p>No ahi clientes</p>
+            </div>
         </div>
     </body>
 </html>
